# TestCABLE

./: BDD.db  LICENSE  README.md  TestCable_save.rar  main.cpp
Arduino/: TestCable.cpp  VEML6040.cpp  VEML6040.h  VEML6040.ino
BDD/: BDD.README  CMakeLists.txt  MCD.mwb  main.cpp  testcable.pro.txt
IHM/: BDD.db  IHM.README  TestCable.pro  aide.cpp  aide.h  aide.ui  clicablelabel.cpp  clicablelabel.h  datecode.cpp  datecode.h  images.qrc  main.cpp  modele.qmodel  progchip.cpp  progchip.h  readchip.cpp  readchip.h  testcable.cpp  testcable.h  testcable.ui
IHM/Lib/sqlite3/: sqlite3.exp  sqlite3.lib
